# konohascript

./: CMakeLists.txt  INSTALL  README  config.h.cmake
package/konoha.compiler/: CMakeLists.txt  compiler.c  compiler.k  konohac.c
package/konoha.compiler.java/: CMakeLists.txt  build.xml.cmake  java.k  jkonoha.cmake
package/konoha.compiler.java/api/: java_awt.k  java_awt_event.k  java_io.k  java_lang.k  java_lang_reflect.k  java_math.k  java_net.k  java_nio.k  java_sql.k  java_util.k  java_util_concurrent.k
package/konoha.compiler.java/sample/: canvas.k  frame.k  sleep.k  tetris.k  thread.k
package/konoha.compiler.java/test/: aobench.kc  array.k  array.kc  binarytrees.k  binarytrees.kc  foreach.k  foreach.kc  inheri.k  inheri.kc  map.k  map.kc  print.k  print.kc  str.k  str.kc
package/konoha.compiler.java/tools/: chk  makekc
package/konoha.compiler.js/: CMakeLists.txt  js.k  jskonoha  konoha2js
package/konoha.compiler.js/js.dom/: CMakeLists.txt  dom.k  event.k
package/konoha.compiler.js/js.jquery/: CMakeLists.txt  jquery.k
package/konoha.compiler.js/js.math/: CMakeLists.txt  math.k
package/konoha.compiler.js/js.websocket/: CMakeLists.txt  othello.k  result  server.js  websocket.k
package/konoha.compiler.js/js_test/: aobench_canvas.k  canvas.k  demo.k  jquery.k  map.k  memory.k
package/konoha.compiler.js/konoha.dom/: CMakeLists.txt  dom.k
package/konoha.compiler.js/othello/: js.dom.js  js.jquery.js  konoha.math.js  othello.html  server.js
package/konoha.compiler.js/runtime/: demo.css  demo.html  jquery.js  js.dom.js  js.jquery.js  js.js  js.math.js  js.websocket.js  konoha.js  konoha.math.js  math.js  window.js
package/konoha.compiler.js/test/: array.k
package/konoha.compiler.optllvm/: CMakeLists.txt  kl  opt.cpp  optllvm.k
package/konoha.compiler/llvm_test/: and.k  app-FFT.k  app-MonteCarlo.k  app-SparseCompRow.k  app-ao.k  app-deltablue.k  app-dhrystone.k  app-linpack.k  app-richards.k  app-tarai.k  argv.k  callback.k  cast.k  ctor.k  delegate.k  do.k  downcast.k  dynamic.k  extends.k  fib.k  fields.k  float_op.k  for.k  fornest.k  gc-linklist.k  gc-tree.k  gc.k  global.k  hello.k  if.k  int_op.k  iterator.k  math.k  microbench3.k  new.k  or.k  print.k  shootout-binarytrees.k  shootout-fannkuch.k  shootout-fasta.k  (+33 more)
package/konoha.compiler/transpiler/: CMakeLists.txt  transpiler.k
package/konoha.gsl/: CMakeLists.txt  gsl.k
package/konoha.gsl/ac/: ac.sh  comb.k  math.k  multi.k  perm.k  poly.k
package/konoha.gsl/sample/: comb.k  math.k  poly.k
package/konoha.gsl/src/: comb.c  gsl.c  math.c  multi.c  perm.c  poly.c  stats.c
package/konoha.gwt/: CMakeLists.txt  Makefile  README  gwt.k
package/konoha.gwt/include/: gwt.hpp
package/konoha.gwt/sample/: ar.k  complex.k  demo.k  demo.org.k  drawer.k  fire.k  game.k  glow.k  hello.k  physics.k  puzzle.k  signage.k  water.k
package/konoha.gwt/src/: Application.cpp  Brush.cpp  Camera.cpp  Color.cpp  ComplexItem.cpp  Connector.cpp  Contact.cpp  Ellipse.cpp  Font.cpp  Group.cpp  Item.cpp  Line.cpp  MouseEvent.cpp  Painter.cpp  Pen.cpp  Point.cpp  Rect.cpp  Scene.cpp  Shadow.cpp  Text.cpp  Texture.cpp  TimeLine.cpp  Timer.cpp  Tracker.cpp  Transform.cpp  Triangle.cpp  Video.cpp  View.cpp  World.cpp  gwt.cpp  moc_gwt.cpp
package/konoha.io/: CMakeLists.txt  Makefile  io.k
package/konoha.io/src/: base64.c  digest.c  io.c  msgpack.c
package/konoha.llvm/: CMakeLists.txt  llvm.cpp  llvm.k
package/konoha.llvm/sample/: add.k
package/konoha.llvm/test/: Module.k
package/konoha.mpi/: CMakeLists.txt  Makefile  konoha_mpi.h  mpi.c  mpi.k  mpidebug  mpiproc
package/konoha.mpi/ac/: ac.sh  array.k
package/konoha.mpi/misc/: Makefile.mpich  Makefile.ompi  gen_operator.sh  mpidebug  pointer.diff  src_lang_script.diff  t2k.mk
package/konoha.mpi/sample/: array.k  comm_crate.k  cpi.k  cpi_m.k  fact.k  helloworld.k  mat-mat-1dim.k  mat-mat-2dim.k  mat-mat-blas.k  mat-mat.k  pid.k  ping_pong.k  pt2pt.k  pt2ptnb.k  pt2ptobj.k  time.k  wa1.k  wa2.k
package/konoha.mpi/src/: array.c  coll.c  comm.c  const.c  ctx.c  data.c  general.c  mpikonoha.c  op.c  pt2pt.c  req.c  sys.c
package/konoha.physics/: CMakeLists.txt  physics.cpp  physics.hpp  physics.k
package/konoha.physics/include/: KQGraphicsEllipseItem.hpp  KQGraphicsItem.hpp  KQGraphicsItemGroup.hpp  KQGraphicsRectItem.hpp  KQGraphicsScene.hpp  KQGraphicsSimpleTextItem.hpp  KQObject.hpp  qt4_common.hpp
package/konoha.physics/sample/: bench.k  bridge.k  canvas.k  combination.k  complex.k  joint.k  net.k  sample.k  tetris.k  util.k
package/konoha.physics/src/: KQGraphicsItem.cpp  KQGraphicsItemGroup.cpp  QGraphicsComplexItem.cpp  QWorld.cpp
package/konoha.qt4/: CMakeLists.txt  Makefile  README  qt4.hpp  qt4.k
package/konoha.qt4.opencv/: CMakeLists.txt  qopencv.cpp  qopencv.hpp
package/konoha.qt4.opencv/sample/: sample.k
package/konoha.qt4.physics/: CMakeLists.txt  README  physics.k
package/konoha.qt4.physics/include/: KQAbstractGraphicsShapeItem.hpp  KQGraphicsItem.hpp  KQGraphicsPixmapItem.hpp  qt4_common.hpp
package/konoha.qt4.physics/sample/: angrybird.k  bench.k  bridge.k  canvas.k  combination.k  complex.k  joint.k  net.k  sample.k  tetris.k
package/konoha.qt4.physics/src/: DebugDraw.cpp  KQGraphicsItem.cpp  KQGraphicsItemGroup.cpp  QJoint.cpp  QWorld.cpp
package/konoha.qt4/include/: KQAbstractButton.hpp  KQAbstractEventDispatcher.hpp  KQAbstractFileEngine.hpp  KQAbstractFileEngineHandler.hpp  KQAbstractGraphicsShapeItem.hpp  KQAbstractItemDelegate.hpp  KQAbstractItemModel.hpp  KQAbstractItemView.hpp  KQAbstractListModel.hpp  KQAbstractNetworkCache.hpp  KQAbstractPrintDialog.hpp  KQAbstractProxyModel.hpp  KQAbstractScrollArea.hpp  KQAbstractSlider.hpp  KQAbstractSocket.hpp  KQAbstractSpinBox.hpp  KQAbstractState.hpp  KQAbstractTableModel.hpp  KQAbstractTextDocumentLayout.hpp  KQAbstractTransition.hpp  KQAccessible.hpp  KQAccessibleBridge.hpp  KQAccessibleEvent.hpp  KQAccessibleInterface.hpp  KQAction.hpp  (+440 more)
package/konoha.signal/: CMakeLists.txt  signal.c  signal.k
package/konoha.sql/: CMakeLists.txt  ChangeLogs  Makefile  sql.k
(+1073 files in other folders)
