cmake_minimum_required(VERSION 2.6)
set(CMAKE_BUILD_TYPE ${KONOHA_BUILD_TYPE})

if(USE_COMPILER_PKG)
project(compiler)
set(PACKAGE_SOURCE_CODE compiler.c)
set(PACKAGE_SCRIPT_CODE compiler.k)

set(PACKAGE_NAME    ${PROJECT_NAME})
set(PACKAGE_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
set(PACKAGE_STRING  ${CMAKE_PROJECT_NAME}-${PACKAGE_VERSION})
set(KONOHA_PACKAGE_DIR konoha/package/${KONOHA_VERSION}/konoha.${PROJECT_NAME})

set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_SOURCE_DIR}/include  ${CMAKE_CURRENT_BINARY_DIR}
		${KONOHA_INCLUDE_DIRS})
include_directories(${INCLUDE_DIRS})

add_definitions(-D_SETUP)


add_library(${PACKAGE_NAME} SHARED ${PACKAGE_SOURCE_CODE})
set_target_properties(${PACKAGE_NAME} PROPERTIES PREFIX "")
target_link_libraries(${PACKAGE_NAME} konoha ${PACKAGE_EXTRA_LIBRARY})

add_executable(konohac "konohac.c")
target_link_libraries(konohac konoha)
install(TARGETS konohac RUNTIME DESTINATION bin)

install(TARGETS ${PACKAGE_NAME} DESTINATION ${KONOHA_PACKAGE_DIR})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_SCRIPT_CODE} DESTINATION ${KONOHA_PACKAGE_DIR})


enable_testing()
set(k "konoha")
set(DIR "${CMAKE_CURRENT_SOURCE_DIR}/llvm_test")
add_test(NAME "cast.k"    COMMAND ${k} "${DIR}/cast.k")
add_test(NAME "ctro.k"    COMMAND ${k} "${DIR}/ctor.k")
add_test(NAME "do.k"      COMMAND ${k} "${DIR}/do.k")
add_test(NAME "fib.k"     COMMAND ${k} "${DIR}/fib.k")
add_test(NAME "for.k"     COMMAND ${k} "${DIR}/for.k")
add_test(NAME "fornest.k" COMMAND ${k} "${DIR}/fornest.k")
add_test(NAME "gc.k"      COMMAND ${k} "${DIR}/gc.k")
add_test(NAME "global.k"  COMMAND ${k} "${DIR}/global.k")
add_test(NAME "hello.k"   COMMAND ${k} "${DIR}/hello.k")
add_test(NAME "if.k"      COMMAND ${k} "${DIR}/if.k")
add_test(NAME "new.k"     COMMAND ${k} "${DIR}/new.k")
add_test(NAME "print.k"   COMMAND ${k} "${DIR}/print.k")
add_test(NAME "test.k"    COMMAND ${k} "${DIR}/test.k")
add_test(NAME "while.k"   COMMAND ${k} "${DIR}/while.k")
add_test(NAME "and.k"     COMMAND ${k} "${DIR}/and.k")
add_test(NAME "dynamic.k" COMMAND ${k} "${DIR}/dynamic.k")
add_test(NAME "micro.k"   COMMAND ${k} "${DIR}/microbench3.k")

add_test(NAME "fannkuch"     COMMAND ${k} "${DIR}/shootout-fannkuch.k")
add_test(NAME "fasta"        COMMAND ${k} "${DIR}/shootout-fasta.k")
add_test(NAME "fastaredux"   COMMAND ${k} "${DIR}/shootout-fastaredux.k")
add_test(NAME "mandelbrot"   COMMAND ${k} "${DIR}/shootout-mandelbrot.k")
add_test(NAME "nbody"        COMMAND ${k} "${DIR}/shootout-nbody.k")
add_test(NAME "nsieve"       COMMAND ${k} "${DIR}/shootout-nsieve.k")
add_test(NAME "partialsums"  COMMAND ${k} "${DIR}/shootout-partialsums.k")
add_test(NAME "spectralnorm" COMMAND ${k} "${DIR}/shootout-spectralnorm.k")

add_test(NAME "app-ao.k"            COMMAND ${k} "${DIR}/app-ao.k")
add_test(NAME "app-FFT.k"           COMMAND ${k} "${DIR}/app-FFT.k")
add_test(NAME "app-MonteCarlo.k"    COMMAND ${k} "${DIR}/app-MonteCarlo.k")
add_test(NAME "app-SparseCompRow.k" COMMAND ${k} "${DIR}/app-SparseCompRow.k")
add_test(NAME "app-deltablue.k"     COMMAND ${k} "${DIR}/app-deltablue.k")
add_test(NAME "app-dhrystone.k"     COMMAND ${k} "${DIR}/app-dhrystone.k")
add_test(NAME "app-linpack.k"       COMMAND ${k} "${DIR}/app-linpack.k")
add_test(NAME "app-richards.k"      COMMAND ${k} "${DIR}/app-richards.k")
add_test(NAME "app-tarai.k"         COMMAND ${k} "${DIR}/app-tarai.k")
add_test(NAME "gc-linklist.k"       COMMAND ${k} "${DIR}/gc-linklist.k")
add_test(NAME "gc-tree.k"           COMMAND ${k} "${DIR}/gc-tree.k")

add_test(NAME "t-array.k"  COMMAND ${k} "${DIR}/t-array.k")
add_test(NAME "t-bool.k"   COMMAND ${k} "${DIR}/t-bool.k")
add_test(NAME "t-fib.k"    COMMAND ${k} "${DIR}/t-fib.k")
add_test(NAME "t-map.k"    COMMAND ${k} "${DIR}/t-map.k")
add_test(NAME "t-math.k"   COMMAND ${k} "${DIR}/t-math.k")
add_test(NAME "t-string.k" COMMAND ${k} "${DIR}/t-string.k")

add_test(NAME "vm-assign.k"         COMMAND ${k} "${DIR}/vm-assign.k"        )
add_test(NAME "vm-eval.k"           COMMAND ${k} "${DIR}/vm-eval.k"          )
add_test(NAME "vm-fib.k"            COMMAND ${k} "${DIR}/vm-fib.k"           )
add_test(NAME "vm-field.k"          COMMAND ${k} "${DIR}/vm-field.k"         )
add_test(NAME "vm-global.k"         COMMAND ${k} "${DIR}/vm-global.k"        )
add_test(NAME "vm-inheritance.k"    COMMAND ${k} "${DIR}/vm-inheritance.k"   )
add_test(NAME "vm-io.k"             COMMAND ${k} "${DIR}/vm-io.k"            )
add_test(NAME "vm-loop.k"           COMMAND ${k} "${DIR}/vm-loop.k"          )
add_test(NAME "vm-map.k"            COMMAND ${k} "${DIR}/vm-map.k"           )
add_test(NAME "vm-nestedcall.k"     COMMAND ${k} "${DIR}/vm-nestedcall.k"    )
add_test(NAME "vm-new.k"            COMMAND ${k} "${DIR}/vm-new.k"           )
add_test(NAME "vm-opt.k"            COMMAND ${k} "${DIR}/vm-opt.k"           )
add_test(NAME "vm-pagerank.k"       COMMAND ${k} "${DIR}/vm-pagerank.k"      )
add_test(NAME "vm-qsbench.k"        COMMAND ${k} "${DIR}/vm-qsbench.k"       )
add_test(NAME "vm-string.k"         COMMAND ${k} "${DIR}/vm-string.k"        )
add_test(NAME "vm-toyinterpreter.k" COMMAND ${k} "${DIR}/vm-toyinterpreter.k")
endif(USE_COMPILER_PKG)

